final version of the cv pipeline

--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -206,6 +206,13 @@
     "parameter: region_list = path\n",
     "# name prefix of the molecular_pheno\n",
     "parameter: name_prefix = \"chr\"\n",
+    "# Whether impute the missing values\n",
+    "parameter: impute = \"TRUE\"\n",
+    "# propotion of samples set into testing, set to zero if no cv are needed.\n",
+    "parameter: testing_prop = 0.2\n",
+    "# Number of training & testing samples used\n",
+    "parameter: cv_times = 100\n",
+    "\n",
     "\n",
     "# Get regions of interest to focus on.\n",
     "regions = [x.strip().split() for x in open(region_list).readlines() if x.strip() and not x.strip().startswith('#')]\n",
@@ -313,9 +320,6 @@
    "outputs": [],
    "source": [
     "[mv_susie_2,mv_susie_cv_2]\n",
-    "# Whether impute the missing values\n",
-    "parameter: impute = \"TRUE\"\n",
-    "\n",
     "input: group_by = 3, group_with = 'regions'\n",
     "output:  f'{wd:a}/result/{_input[0]:bn}.mv_susie.model.RData',\n",
     "         f'{wd:a}/result/{_input[0]:bn}.transformed_XY.RData',\n",
@@ -455,12 +459,9 @@
    "outputs": [],
    "source": [
     "[mv_susie_cv_3]\n",
-    "# propotion of samples set into testing, set to zero if no cv are needed.\n",
-    "parameter: testing_prop = 0.2\n",
-    "# Number of training & testing samples used\n",
-    "parameter: cv_times = 100\n",
     "input: group_by = 3, group_with = 'regions'\n",
-    "output:  f'{wd:a}/result/{_input[0]:bn}.mv_susie.model.cv.RData',\n",
+    "output:  f'{wd:a}/result/{_input[0]:bn}.mv_susie.model.cv.RData'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -498,50 +499,53 @@
     "    }\n",
     "    \n",
     "    ## Compute r2 function\n",
+    "    ## Compute r2 function\n",
     "    compute_r2 = function(raw,fitted){\n",
-    "    r2 = rep(0,ncol(raw))\n",
-    "    for (i in 1:ncol(raw)){\n",
-    "      cor(fitted[,n][which(!is.na(raw[,i]))],raw[,i]%>%na.omit())^2\n",
+    "      r2 = rep(0,ncol(raw))\n",
+    "      for (j in 1:ncol(raw)){\n",
+    "        r2[j] =  cor(fitted[,j][which(!is.na(raw[,j]))],raw[,j]%>%na.omit())^2\n",
     "      }\n",
-    "    return(rmse)\n",
+    "      return(r2)\n",
     "    }\n",
+    "\n",
     "    \n",
     "    \n",
     "    # Load data\n",
-    "    full_model = attach($[_input[[0]]])$m_$[_regions[0]]\n",
-    "    X = attach($[_input[[1]]])$scaled_$[_regions[0]][[1]]\n",
-    "    Y = attach($[_input[[1]]])$scaled_$[_regions[0]][[2]]\n",
+    "    full_model = attach('$[_input[0]]')\n",
+    "    full_model = full_model$m_$[_regions[0]]\n",
+    "    X = attach('$[_input[1]]')$scaled_$[_regions[0]][[1]]\n",
+    "    Y = attach('$[_input[1]]')$scaled_$[_regions[0]][[2]]\n",
     "    \n",
     "    # Merged the X and Y for producing testing and training set for modelr cv\n",
-    "    cv_df_raw = cbind(X,Y)%>%as.tibble() \n",
-    "    cv_df = crossv_mc(cv_df_raw, $[cv_times] ,test = $[testing_prop])%>%mutate(\n",
-    "                           train_X = map(train,~as_tibble(.x)[1:ncol(X)]),\n",
-    "                           train_Y = map(train,~as_tibble(.x)[ncol(X)+1,ncol(X)+ncol(Y)]),\n",
-    "                           test_X = map(test_X,~as_tibble(.x)[1:ncol(X)]),\n",
-    "                           test_Y = map(test,~as_tibble(.x)[ncol(X)+1,ncol(X)+ncol(Y)])\n",
-    "                           )\n",
+    "    cv_df_raw = cbind(X,Y)%>%as_tibble() \n",
+    "    cv_df = crossv_mc(cv_df_raw, 3,test = 0.2)%>%mutate(\n",
+    "      train_X = map(train,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
+    "      train_Y = map(train,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix),\n",
+    "      test_X = map(test,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
+    "      test_Y = map(test,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix)\n",
+    "    )\n",
     "                           \n",
     "    # Compute the cov matrix for training set Y based on the choice of imputation                  \n",
     "                         \n",
     "    if ($[impute] == TRUE){\n",
-    "    cv_df = cv_df%>%mutate(\n",
-    "    cov = map(~train_Y,.x%>%compute_cov_flash())\n",
-    "    )\n",
-    "    }else{\n",
-    "    cv_df = cv_df%>%mutate(\n",
-    "    cov = map(~train_Y,.x%>%na.omit%>%cov())\n",
-    "    )\n",
-    "    }\n",
+    "        cv_df = cv_df%>%mutate( \n",
+    "        cov = map(train_Y,~.x%>%compute_cov_flash())\n",
+    "      )\n",
+    "        }else{\n",
+    "      cv_df = cv_df%>%mutate(\n",
+    "        cov = map(train_Y,~cov(.x%>%na.omit)))}\n",
+    "        \n",
+    "    # Actual cv\n",
     "    \n",
     "    cv_df = cv_df%>%mutate(\n",
     "    \n",
-    "    # Get the prior\n",
+    "    ## Get the prior\n",
     "    \n",
     "      prior = pmap(list(train_X,train_Y,cov),function(first,second,third)(\n",
     "        create_mash_prior(sample_data = list(X=first,Y=second, residual_variance= third, max_mixture_len=-1,center=F,scale=F))\n",
     "        )),\n",
     "        \n",
-    "    # Do msusie\n",
+    "    ## Do msusie\n",
     "    \n",
     "      msusie = pmap(list(train_X,train_Y,cov,prior),function(first,second,third,forth)(\n",
     "        msusie(first,second, L=10, prior_variance=forth,residual_variance = third,precompute_covariances = TRUE)\n",
@@ -630,7 +634,7 @@
    "source": [
     "[mv_susie_cv_4]\n",
     "input: group_by = \"all\"\n",
-    "output:  f'{wd:a}/mv.RData'\n",
+    "output:  f'{wd:a}/mv_cv.RData'\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
