fix mv susie pipeline and add cv for univariate susie pipeline

--- a/Workflow/mv_susie.ipynb
+++ b/Workflow/mv_susie.ipynb
@@ -419,7 +419,7 @@
     "    # Compute the Cov matrix for Y_complete\n",
     "    Y_$[_regions[0]]_cov = cov(Y_complete_$[_regions[0]])}\n",
     "   \n",
-    "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance= Y_$[_regions[0]]_cov, max_mixture_len=-1))\n",
+    "    prior_covar <- create_mash_prior(sample_data = list(X=X_$[_regions[0]],Y=Y_$[_regions[0]], residual_variance= Y_$[_regions[0]]_cov, max_mixture_len=-1,center=F,scale=F))\n",
     "    m_$[_regions[0]] = msusie(X_$[_regions[0]], \n",
     "                Y_$[_regions[0]], \n",
     "                L=10, \n",
@@ -432,7 +432,7 @@
     "    for (i in 1:ncol(Y_$[_regions[0]])){\n",
     "      hsq_$[_regions[0]][i] = var(predict(m_$[_regions[0]])[,i])/var(Y_$[_regions[0]][,i]%>%na.omit())}\n",
     "    m_$[_regions[0]]$hsq = hsq_$[_regions[0]]\n",
-    "        \n",
+    "   \n",
     "    #Output: model with hsq estimated\n",
     "    save(m_$[_regions[0]],file = \"$[_output[0]]\")\n",
     "    #Output: scaled data\n",
@@ -460,8 +460,9 @@
    "source": [
     "[mv_susie_cv_3]\n",
     "input: group_by = 3, group_with = 'regions'\n",
-    "output:  f'{wd:a}/result/{_input[0]:bn}.mv_susie.model.cv.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "output:  f'{wd:a}/result/{_input[0]:bn}.cv.RData',\n",
+    "         f'{wd:a}/result/{_input[0]:bn}.cv_diag.RData'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '7G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -499,16 +500,85 @@
     "    }\n",
     "    \n",
     "    ## Compute r2 function\n",
-    "    ## Compute r2 function\n",
     "    compute_r2 = function(raw,fitted){\n",
+    "      r2 = rep(0,ncol(raw))\n",
+    "      for (j in 1:ncol(raw)){\n",
+    "       r2[j] = summary(lm( fitted[,j] ~ raw[,j] ))$adj.r.sq\n",
+    "      }\n",
+    "      return(r2)\n",
+    "    }\n",
+    "    \n",
+    "    ## Compute r2 raw\n",
+    "    \n",
+    "    compute_r2_raw = function(raw,fitted){\n",
     "      r2 = rep(0,ncol(raw))\n",
     "      for (j in 1:ncol(raw)){\n",
     "        r2[j] =  cor(fitted[,j][which(!is.na(raw[,j]))],raw[,j]%>%na.omit())^2\n",
     "      }\n",
     "      return(r2)\n",
     "    }\n",
-    "\n",
     "    \n",
+    "    ## Get P.value\n",
+    "    compute_pval = function(raw,fitted){\n",
+    "      pval = rep(0,ncol(raw))\n",
+    "      for (k in 1:ncol(raw)){\n",
+    "        pval[k] = summary(lm( fitted[,k] ~ raw[,k] ))$coef[2,4]\n",
+    "      }\n",
+    "      return(pval)\n",
+    "    }\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    ###Functions to compute MAF and missing genotype rate\n",
+    "    compute_maf <- function(geno){\n",
+    "      f <- mean(geno,na.rm = TRUE)/2\n",
+    "      return(min(f, 1-f))\n",
+    "    }\n",
+    "    \n",
+    "    compute_missing <- function(geno){\n",
+    "      miss <- sum(is.na(geno))/length(geno)\n",
+    "      return(miss)\n",
+    "    }\n",
+    "    \n",
+    "    mean_impute <- function(geno){\n",
+    "      f <- apply(geno, 2, function(x) mean(x,na.rm = TRUE))\n",
+    "      for (i in 1:length(f)) geno[,i][which(is.na(geno[,i]))] <- f[i]\n",
+    "      return(geno)\n",
+    "    }\n",
+    "    \n",
+    "    is_zero_variance <- function(x) {\n",
+    "      if (length(unique(x))==1) return(T)\n",
+    "      else return(F)\n",
+    "    }\n",
+    "    ### Filter X matrix\n",
+    "    filter_X <- function(X, missing_rate_thresh, maf_thresh) {\n",
+    "      rm_col <- which(apply(X, 2, compute_missing) > missing_rate_thresh)\n",
+    "      if (length(rm_col)) X <- X[, -rm_col]\n",
+    "      rm_col <- which(apply(X, 2, compute_maf) < maf_thresh)\n",
+    "      if (length(rm_col)) X <- X[, -rm_col]\n",
+    "      rm_col <- which(apply(X, 2, is_zero_variance))\n",
+    "      if (length(rm_col)) X <- X[, -rm_col]\n",
+    "      return(mean_impute(X))\n",
+    "    }\n",
+    "    \n",
+    "    ### Produce CV dataset\n",
+    "    cv_data_gen = function(X,Y,times,test_prop){\n",
+    "    # Merged the X and Y for producing testing and training set for modelr cv\n",
+    "    cv_df_raw = cbind(X,Y)%>%as_tibble() \n",
+    "    cv_df = crossv_mc(cv_df_raw, times,test = test_prop)%>%mutate(\n",
+    "      train_X = map(train,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
+    "      train_Y = map(train,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix),\n",
+    "      test_X = map(test,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
+    "      test_Y = map(test,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix)\n",
+    "    )  \n",
+    "    \n",
+    "    # Filter Train X with maf and missing, filter test X with the same col as Train X\n",
+    "    cv_df = cv_df%>%mutate(\n",
+    "    train_X = map(train_X,~filter_X(.x,0.1,0.01)),\n",
+    "    test_X = map2(test_X,train_X,~.x%>%as_tibble()%>%select(colnames(.y))%>%as.matrix())\n",
+    "    )\n",
+    "    return(cv_df)\n",
+    "    }\n",
     "    \n",
     "    # Load data\n",
     "    full_model = attach('$[_input[0]]')\n",
@@ -516,15 +586,12 @@
     "    X = attach('$[_input[1]]')$scaled_$[_regions[0]][[1]]\n",
     "    Y = attach('$[_input[1]]')$scaled_$[_regions[0]][[2]]\n",
     "    \n",
-    "    # Merged the X and Y for producing testing and training set for modelr cv\n",
-    "    cv_df_raw = cbind(X,Y)%>%as_tibble() \n",
-    "    cv_df = crossv_mc(cv_df_raw, 3,test = 0.2)%>%mutate(\n",
-    "      train_X = map(train,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
-    "      train_Y = map(train,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix),\n",
-    "      test_X = map(test,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
-    "      test_Y = map(test,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix)\n",
-    "    )\n",
-    "                           \n",
+    "    # Generate cv dataaset\n",
+    "    \n",
+    "    \n",
+    "    cv_df = cv_data_gen(X,Y,$[cv_times],$[testing_prop])\n",
+    "    \n",
+    "                                                      \n",
     "    # Compute the cov matrix for training set Y based on the choice of imputation                  \n",
     "                         \n",
     "    if ($[impute] == TRUE){\n",
@@ -534,7 +601,7 @@
     "        }else{\n",
     "      cv_df = cv_df%>%mutate(\n",
     "        cov = map(train_Y,~cov(.x%>%na.omit)))}\n",
-    "        \n",
+    "\n",
     "    # Actual cv\n",
     "    \n",
     "    cv_df = cv_df%>%mutate(\n",
@@ -557,24 +624,31 @@
     "      weight = map(msusie,~.x$coef),\n",
     "      test_fitted = map2(msusie,test_X,~predict.mmbr(.x,.y)),\n",
     "      rmse = map2(test_Y,test_fitted,~compute_rmse(.x,.y)),\n",
-    "      r2 = map2(test_Y,test_fitted,~compute_r2(.x,.y))\n",
+    "      r2 = map2(test_Y,test_fitted,~compute_r2(.x,.y)),\n",
+    "      r2_raw = map2(test_Y,test_fitted,~compute_r2_raw(.x,.y)),\n",
+    "      pval = map2(test_Y,test_fitted,~compute_pval(.x,.y))\n",
     "    )\n",
     "    \n",
     "    # Calculate metrics\n",
     "    \n",
     "    mean_rmse = cv_df%>%pull(rmse)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
     "    mean_r2 = cv_df%>%pull(r2)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
-    "    \n",
+    "    mean_r2_raw = cv_df%>%pull(r2_raw)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
+    "    mean_pval = cv_df%>%pull(pval)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
+    "\n",
+    "  \n",
     "    # Save metrics\n",
     "    full_model$rmse = mean_rmse\n",
-    "    full_model$r2 = mean_r2\n",
-    "  \n",
+    "    full_model$r2 = mean_r2 \n",
+    "    full_model$r2_raw = mean_r2_raw    \n",
+    "    full_model$pval = mean_pval    \n",
+    "\n",
+    "    # Save the CV data\n",
+    "    save(cv_df,file = \"$[_output[1]]\")\n",
+    "    \n",
     "    #Output\n",
     "    save(full_model,file = \"$[_output[0]]\")\n",
-    "    \n",
-    "\n",
-    " \n",
-    "\n"
+    "    "
    ]
   },
   {
@@ -650,7 +724,7 @@
     "    region = region%>%mutate(path = map(ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
     "    # Load the data\n",
     "    output = region%>%mutate(env = map(path,~attach(.x)),\n",
-    "                            tb_name = map_chr(ID,~paste(collapse = \"_\", c(\"m\",.x))),\n",
+    "                            tb_name = \"full_model\",\n",
     "                             model = map2(env,tb_name , ~get(.y,env = .x)))\n",
     "    # Save the combined output\n",
     "    save(output,file = \"$[_output]\")"
