--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -342,13 +342,18 @@
     "# Specify the minumum p value for heratibility for the study to continue\n",
     "parameter: hsq_p = 0.01\n",
     "\n",
-    "\n",
-    "\n",
     "# Specify what model are used to compute weights.\n",
     "# Notice that `blsmm` can be very resource consuming.\n",
     "parameter: model = ['bslmm', 'blup' , 'lasso', 'top1', 'enet']\n",
     "# Container option for software to run the analysis: docker or singularity\n",
     "parameter: container = 'gaow/twas'\n",
+    "\n",
+    "# Propotion of samples set into testing, set to zero if no cv are needed.\n",
+    "parameter: testing_prop = 0.2\n",
+    "# Number of training & testing samples used\n",
+    "parameter: cv_times = 100\n",
+    "\n",
+    "\n",
     "# Get regions of interest to focus on.\n",
     "regions = [x.strip().split() for x in open(region_list).readlines() if x.strip() and not x.strip().startswith('#')]\n",
     "\n",
@@ -390,7 +395,7 @@
    },
    "outputs": [],
    "source": [
-    "[twas_fusion_1,compute_wgt_1,susie_1]\n",
+    "[twas_fusion_1,compute_wgt_1,susie_1,susie_cv_1]\n",
     "\n",
     "input: molecular_pheno, for_each = \"regions\"\n",
     "output: f'{wd:a}/cache/{_input:bn}.{_regions[3]}.exp',\n",
@@ -431,7 +436,7 @@
    },
    "outputs": [],
    "source": [
-    "[twas_fusion_2,compute_wgt_2,susie_2]\n",
+    "[twas_fusion_2,compute_wgt_2,susie_2,susie_cv_2]\n",
     "input: group_by = 2, group_with = 'regions'\n",
     "output: f'{_input[0]:n}.bed',\n",
     "        f'{_input[0]:n}.bim',\n",
@@ -652,7 +657,7 @@
    "outputs": [],
    "source": [
     "#Susie test\n",
-    "[susie_3]\n",
+    "[susie_3,susie_cv_3]\n",
     "input:  group_by = 3, group_with = 'regions'\n",
     "output: f'{wd:a}/susie/{_input[0]:bn}.susie.hsq',\n",
     "        f'{wd:a}/susie/{_input[0]:bn}.wgt.txt',\n",
@@ -668,38 +673,80 @@
     "    library(\"susieR\")\n",
     "    library(\"plink2R\")\n",
     "    library(\"readr\")\n",
+    "    library(\"modelr\")\n",
+    "    library(\"purrr\")\n",
+    "\n",
+    "    # Define functions\n",
+    "    ###Functions to compute MAF and missing genotype rate\n",
+    "    compute_maf <- function(geno){\n",
+    "      f <- mean(geno,na.rm = TRUE)/2\n",
+    "      return(min(f, 1-f))\n",
+    "    }\n",
+    "    \n",
+    "    compute_missing <- function(geno){\n",
+    "      miss <- sum(is.na(geno))/length(geno)\n",
+    "      return(miss)\n",
+    "    }\n",
+    "    \n",
+    "    mean_impute <- function(geno){\n",
+    "      f <- apply(geno, 2, function(x) mean(x,na.rm = TRUE))\n",
+    "      for (i in 1:length(f)) geno[,i][which(is.na(geno[,i]))] <- f[i]\n",
+    "      return(geno)\n",
+    "    }\n",
+    "    \n",
+    "    is_zero_variance <- function(x) {\n",
+    "      if (length(unique(x))==1) return(T)\n",
+    "      else return(F)\n",
+    "    }\n",
+    "    ### Filter X matrix\n",
+    "    filter_X <- function(X, missing_rate_thresh, maf_thresh) {\n",
+    "      rm_col <- which(apply(X, 2, compute_missing) > missing_rate_thresh)\n",
+    "      if (length(rm_col)) X <- X[, -rm_col]\n",
+    "      rm_col <- which(apply(X, 2, compute_maf) < maf_thresh)\n",
+    "      if (length(rm_col)) X <- X[, -rm_col]\n",
+    "      rm_col <- which(apply(X, 2, is_zero_variance))\n",
+    "      if (length(rm_col)) X <- X[, -rm_col]\n",
+    "      return(mean_impute(X))\n",
+    "      \n",
+    "    ###Function to impute the missing X with means and then scale and center X\n",
+    "      impute_and_transform = function(genos,impute = TRUE){\n",
+    "      tmp = genos\n",
+    "      if(impute == TRUE){\n",
+    "      for(i in 1:ncol(tmp)){\n",
+    "        tmp[,i]=coalesce(tmp[,i],mean(tmp[,i]%>%na.omit()))%>%scale()}\n",
+    "        return(tmp)\n",
+    "      } else {\n",
+    "    for(i in 1:ncol(tmp)){\n",
+    "        tmp[,i]=tmp[,i]%>%scale()}\n",
+    "        return(tmp)}}\n",
+    "    if ($[impute] == TRUE){\n",
+    "\n",
+    "    # Load data and transform\n",
     "    genos = read_plink(\"$[_input[0]:n]\")\n",
-    "    # hsq for removing all the na snps\n",
-    "    X = genos$bed%>%t()%>%na.omit()%>%t()\n",
+    "  \n",
+    "    # Filter X by 0.1 NA and 0.01 MAF, and then transfrom X\n",
+    "    \n",
+    "    X_ftr = filter_X(genos$bed,0.1,0.01)\n",
+    "    X = impute_and_transform(X_ftr)\n",
+    "    \n",
     "    Y = genos$fam%>%as_tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))\n",
+    "    \n",
+    "    # Make sure X and Y have the same order\n",
+    "    Y = Y%>%arrange(match(name,rownames(X)))%>%select(-name)\n",
+    "    \n",
+    "    # Susie with full samples\n",
     "    fitted1 = susie(X, Y$V6,\n",
     "                  L = $[causal_variables_L],\n",
     "                  estimate_residual_variance = TRUE, \n",
     "                  estimate_prior_variance = FALSE,\n",
     "                  scaled_prior_variance = $[scaled_prior_variance])\n",
+    "                  \n",
     "    H1 = var(predict(fitted1))/var(Y$V6)\n",
+    "    \n",
     "    top_pip = which(fitted1$pip == fitted1$pip%>%max())\n",
     "    top_snp_full_sample = colnames(X)[top_pip]\n",
     "    top_snp_full_sample = paste(top_snp_full_sample,collapse = \",\")\n",
-    "    # hsq for removing all the na samples\n",
-    "    X2 = genos$bed%>%na.omit()\n",
-    "    Y2 = Y%>%filter(name%in%rownames(X2))\n",
-    "    if(!is.na(var(Y2$V6))){\n",
-    "    fitted2 = susie(X2, Y2$V6,\n",
-    "                  L = $[causal_variables_L],\n",
-    "                  estimate_residual_variance = TRUE, \n",
-    "                  estimate_prior_variance = FALSE,\n",
-    "                  scaled_prior_variance = $[scaled_prior_variance])\n",
-    "    H2 = var(predict(fitted2)) / var(Y$V6)} else { H2 = \"NA\" }\n",
-    "    # hsq for removing all the na samples and na SNPs\n",
-    "    X3 = X[rownames(X) %in% Y2$name,]%>%as.matrix\n",
-    "    if(length(X3) > 0 & !is.na(var(Y2$V6))){\n",
-    "    fitted3 = susie(X3, Y2$V6,\n",
-    "                  L = $[causal_variables_L],\n",
-    "                  estimate_residual_variance = TRUE, \n",
-    "                  estimate_prior_variance = FALSE,\n",
-    "                  scaled_prior_variance = $[scaled_prior_variance])\n",
-    "    H3 = var(predict(fitted3)) / var(Y$V6)} else { H3 = \"NA\" }\n",
+    "    \n",
     "    # hsq for the best performing snp using naive way, excluding only the na SNP\n",
     "    sumstats <- univariate_regression(X, Y$V6)\n",
     "    z_scores <- sumstats$betahat / sumstats$sebetahat\n",
@@ -707,33 +754,281 @@
     "    top_snp = which(abs(z_scores) == max(abs(z_scores%>%na.omit())))\n",
     "    top_snp\n",
     "    HH = var(X[,top_snp]*sumstats$betahat[top_snp])/var(Y$V6)\n",
-    "    HH\n",
     "    top_snp_naive = colnames(X)[top_snp]\n",
     "    top_snp_naive = paste(top_snp_naive,collapse = \",\")\n",
+    "\n",
     "    # storing all the HSQ\n",
     "    hsq_tbl = tibble(file = \"$[_input[0]:n]\", \n",
     "                    region = \"$[_regions[3]]\",\n",
     "                    CS_size = fitted1$sets$cs%>%length(),\n",
     "                    hsq_full_sample = H1,\n",
     "                    top_snp_full_sample = top_snp_full_sample,\n",
-    "                    hsq_full_snp = H2,\n",
-    "                    hsq_neither = H3,\n",
-    "                    hsq_naive = HH,\n",
     "                    top_snp_naive = top_snp_naive)\n",
     "    hsq_tbl%>%write_delim(\"$[_output[0]]\",delim = \"\\t\")\n",
     "    # storing the wgt computed from susie, excluding only the na SNP\n",
     "    susie_wgt = tibble(susie = (coef(fitted1)[2:length(coef(fitted1))]))\n",
     "    susie_wgt%>%write_delim(\"$[_output[1]]\",delim = \"\\t\")\n",
     "    # Save the model for future use\n",
-    "    save(fitted1, file=\"$[_output[2]]\")\n",
+    "    save(fitted1, file=\"$[_output[2]]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CV with univariate susie\n",
+    "[susie_cv_4]\n",
+    "\n",
+    "\n",
+    "input: group_by = 3, group_with = 'regions'\n",
+    "output:  f'{wd:a}/result/{_input[2]:bn}.cv.RData',\n",
+    "         f'{wd:a}/result/{_input[2]:bn}.cv_diag.RData'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"plink2R\")\n",
+    "    library(\"purrr\")\n",
+    "    library(\"modelr\")\n",
+    "    library(\"susie\")\n",
     "    \n",
-    "#Create all_hsq for susie\n",
+    "    # Define functions\n",
+    "   \n",
+    "    ## Compute rmse function\n",
+    "    compute_rmse = function(raw,fitted){\n",
+    "    rmse = rep(0,ncol(raw))\n",
+    "    for (i in 1:ncol(raw)){\n",
+    "      rmse[i] = ((fitted - raw)[,i])^2%>%mean(na.rm = TRUE)%>%sqrt() \n",
+    "      }\n",
+    "    return(rmse)\n",
+    "    }\n",
+    "    \n",
+    "    ## Compute r2 function\n",
+    "    compute_r2 = function(raw,fitted){\n",
+    "      r2 = rep(0,ncol(raw))\n",
+    "      for (j in 1:ncol(raw)){\n",
+    "       r2[j] = summary(lm( fitted[,j] ~ raw[,j] ))$adj.r.sq\n",
+    "      }\n",
+    "      return(r2)\n",
+    "    }\n",
+    "    \n",
+    "    ## Compute r2 raw\n",
+    "    \n",
+    "    compute_r2_raw = function(raw,fitted){\n",
+    "      r2 = rep(0,ncol(raw))\n",
+    "      for (j in 1:ncol(raw)){\n",
+    "        r2[j] =  cor(fitted[,j][which(!is.na(raw[,j]))],raw[,j]%>%na.omit())^2\n",
+    "      }\n",
+    "      return(r2)\n",
+    "    }\n",
+    "    \n",
+    "    ## Get P.value\n",
+    "    compute_pval = function(raw,fitted){\n",
+    "      pval = rep(0,ncol(raw))\n",
+    "      for (k in 1:ncol(raw)){\n",
+    "        pval[k] = summary(lm( fitted[,k] ~ raw[,k] ))$coef[2,4]\n",
+    "      }\n",
+    "      return(pval)\n",
+    "    }\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    ###Functions to compute MAF and missing genotype rate\n",
+    "    compute_maf <- function(geno){\n",
+    "      f <- mean(geno,na.rm = TRUE)/2\n",
+    "      return(min(f, 1-f))\n",
+    "    }\n",
+    "    \n",
+    "    compute_missing <- function(geno){\n",
+    "      miss <- sum(is.na(geno))/length(geno)\n",
+    "      return(miss)\n",
+    "    }\n",
+    "    \n",
+    "    mean_impute <- function(geno){\n",
+    "      f <- apply(geno, 2, function(x) mean(x,na.rm = TRUE))\n",
+    "      for (i in 1:length(f)) geno[,i][which(is.na(geno[,i]))] <- f[i]\n",
+    "      return(geno)\n",
+    "    }\n",
+    "    \n",
+    "    is_zero_variance <- function(x) {\n",
+    "      if (length(unique(x))==1) return(T)\n",
+    "      else return(F)\n",
+    "    }\n",
+    "    ### Filter X matrix\n",
+    "    filter_X <- function(X, missing_rate_thresh, maf_thresh) {\n",
+    "      rm_col <- which(apply(X, 2, compute_missing) > missing_rate_thresh)\n",
+    "      if (length(rm_col)) X <- X[, -rm_col]\n",
+    "      rm_col <- which(apply(X, 2, compute_maf) < maf_thresh)\n",
+    "      if (length(rm_col)) X <- X[, -rm_col]\n",
+    "      rm_col <- which(apply(X, 2, is_zero_variance))\n",
+    "      if (length(rm_col)) X <- X[, -rm_col]\n",
+    "      return(mean_impute(X))\n",
+    "    }\n",
+    "    \n",
+    "    ### Produce CV dataset\n",
+    "    cv_data_gen = function(X,Y,times,test_prop){\n",
+    "    # Merged the X and Y for producing testing and training set for modelr cv\n",
+    "    cv_df_raw = cbind(X,Y)%>%as_tibble() \n",
+    "    cv_df = crossv_mc(cv_df_raw, times,test = test_prop)%>%mutate(\n",
+    "      train_X = map(train,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
+    "      train_Y = map(train,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix),\n",
+    "      test_X = map(test,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
+    "      test_Y = map(test,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix)\n",
+    "    )  \n",
+    "    \n",
+    "    # Filter Train X with maf and missing, filter test X with the same col as Train X\n",
+    "    cv_df = cv_df%>%mutate(\n",
+    "    train_X = map(train_X,~filter_X(.x,0.1,0.01)),\n",
+    "    test_X = map2(test_X,train_X,~.x%>%as_tibble()%>%select(colnames(.y))%>%as.matrix())\n",
+    "    )\n",
+    "    return(cv_df)\n",
+    "    }\n",
+    "    \n",
+    "    # Load Data\n",
+    "    full_model = attach('$[_input[2]]')\n",
+    "    full_model = full_model$m_$fitted1\n",
+    "    \n",
+    "    # Load data and transform\n",
+    "    genos = read_plink(\"$[_input[0]:nn]\")\n",
+    "  \n",
+    "    # Filter X by 0.1 NA and 0.01 MAF, and then transfrom X\n",
+    "    X_ftr = filter_X(genos$bed,0.1,0.01)\n",
+    "    X = impute_and_transform(X_ftr)\n",
+    "    Y = genos$fam%>%as_tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))\n",
+    "    Y = Y$V6\n",
+    "    \n",
+    "    # Make sure X and Y have the same order\n",
+    "    Y = Y%>%arrange(match(name,rownames(X)))%>%select(-name)\n",
+    "\n",
+    "    # Create cv dataset\n",
+    "        \n",
+    "    cv_df = cv_data_gen(X,Y,$[cv_times],$[testing_prop])\n",
+    "\n",
+    "    # Actual cv\n",
+    "    \n",
+    "    cv_df = cv_df%>%mutate(\n",
+    "    \n",
+    "   \n",
+    "    ## Do susie\n",
+    "    \n",
+    "      susie = pmap(list(train_X,train_Y),function(first,second)(\n",
+    "        \n",
+    "        susie(first, second,\n",
+    "        L = $[causal_variables_L],\n",
+    "        estimate_residual_variance = TRUE, \n",
+    "        estimate_prior_variance = FALSE,\n",
+    "        scaled_prior_variance = $[scaled_prior_variance])\n",
+    "        )))\n",
+    "    \n",
+    "    # Extract data \n",
+    "    \n",
+    "    cv_df = cv_df%>%mutate(\n",
+    "      weight = map(susie,~\n",
+    "      (coef(.x)[2:length(coef(.x))])\n",
+    "      ),\n",
+    "      test_fitted = map2(susie,test_X,~predict(.x,.y)),\n",
+    "      rmse = map2(test_Y,test_fitted,~compute_rmse(.x,.y)),\n",
+    "      r2 = map2(test_Y,test_fitted,~compute_r2(.x,.y)),\n",
+    "      r2_raw = map2(test_Y,test_fitted,~compute_r2_raw(.x,.y)),\n",
+    "      pval = map2(test_Y,test_fitted,~compute_pval(.x,.y))\n",
+    "    )\n",
+    "    \n",
+    "    # Calculate metrics\n",
+    "    \n",
+    "    mean_rmse = cv_df%>%pull(rmse)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
+    "    mean_r2 = cv_df%>%pull(r2)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
+    "    mean_r2_raw = cv_df%>%pull(r2_raw)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
+    "    mean_pval = cv_df%>%pull(pval)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
+    "\n",
+    "  \n",
+    "    # Save metrics\n",
+    "    full_model$rmse = mean_rmse\n",
+    "    full_model$r2 = mean_r2 \n",
+    "    full_model$r2_raw = mean_r2_raw    \n",
+    "    full_model$pval = mean_pval    \n",
+    "    fitted1 = full_model\n",
+    "    # Save the CV data\n",
+    "    save(cv_df,file = \"$[_output[1]]\")\n",
+    "    \n",
+    "    #Output\n",
+    "    save(fitted1,file = \"$[_output[0]]\")\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create all_hsq for susie and saved all the susie object into one RData\n",
     "[susie_4]\n",
     "input: group_by = \"all\"\n",
-    "output:f'{wd:a}/susie/all_hsq.txt'\n",
+    "output:f'{wd:a}/susie/all_hsq.txt',\n",
+    "       f'{wd:a}/susie.RData'\n",
     "bash: expand= \"$[ ]\"\n",
-    "  head -1 $[_input[0]] > $[_output]\n",
-    "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample | uniq >> $[_output]"
+    "  head -1 $[_input[0]] > $[_output[0]]\n",
+    "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample | uniq >> $[_output[0]]\n",
+    "\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"purrr\")\n",
+    "    # Load a template\n",
+    "    region = read_delim(\"$[_output[0]]\",delim =\"\\t\")%>%select(path = file, ID = region )\n",
+    "    # get the path\n",
+    "    sur = \".susie.model.RData\"\n",
+    "    region = region%>%mutate(path = map(path, ~paste(collapse = \"\", c(.x,sur))))\n",
+    "    # Load the data\n",
+    "    output = region%>%mutate(env = map(path,~attach(.x)),\n",
+    "                             model = map(env,fitted1, ~get(.y,env = .x)))\n",
+    "    # Save the combined output\n",
+    "    save(output,file = \"$[_output]\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create all_hsq for susie and saved all the susie object into one RData\n",
+    "[susie_cv_5]\n",
+    "input: group_by = \"all\"\n",
+    "output:f'{wd:a}/susie/all_hsq.txt',\n",
+    "       f'{wd:a}/susie.RData'\n",
+    "bash: expand= \"$[ ]\"\n",
+    "\n",
+    "  head -1 $[_input[0]:bnnn].hsq > $[_output]\n",
+    "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample | uniq >> $[_output]\n",
+    "\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
+    "    library(\"dplyr\")\n",
+    "    library(\"tibble\")\n",
+    "    library(\"readr\")\n",
+    "    library(\"purrr\")\n",
+    "    # Load a template\n",
+    "    region = read_delim(\"$[_output[0]]\",delim =\"\\t\")%>%select(path = file, ID = region )\n",
+    "    # get the path\n",
+    "    sur = \".susie.model.cv.RData\"\n",
+    "    region = region%>%mutate(path = map(path, ~paste(collapse = \"\", c(.x,sur))))\n",
+    "    # Load the data\n",
+    "    output = region%>%mutate(env = map(path,~attach(.x)),\n",
+    "                             model = map(env,fitted1, ~get(.y,env = .x)))\n",
+    "    # Save the combined output\n",
+    "    save(output,file = \"$[_output]\")"
    ]
   }
  ],
