bugfix on uni susie cv

--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -810,7 +810,7 @@
     "    compute_r2 = function(raw,fitted){\n",
     "      r2 = rep(0,ncol(raw))\n",
     "      for (j in 1:ncol(raw)){\n",
-    "       r2[j] = summary(lm( fitted[,j] ~ raw[,j] ))$adj.r.sq\n",
+    "       r2[j] = summary(lm( as.matrix(fitted[,j]) ~ as.matrix(raw[,j]) ))$adj.r.sq\n",
     "      }\n",
     "      return(r2)\n",
     "    }\n",
@@ -820,7 +820,7 @@
     "    compute_r2_raw = function(raw,fitted){\n",
     "      r2 = rep(0,ncol(raw))\n",
     "      for (j in 1:ncol(raw)){\n",
-    "        r2[j] =  cor(fitted[,j][which(!is.na(raw[,j]))],raw[,j]%>%na.omit())^2\n",
+    "        r2[j] =  cor(as.matrix(fitted[,j])[which(!is.na(raw[,j]))],raw[,j]%>%na.omit())^2\n",
     "      }\n",
     "      return(r2)\n",
     "    }\n",
@@ -829,7 +829,7 @@
     "    compute_pval = function(raw,fitted){\n",
     "      pval = rep(0,ncol(raw))\n",
     "      for (k in 1:ncol(raw)){\n",
-    "        pval[k] = summary(lm( fitted[,k] ~ raw[,k] ))$coef[2,4]\n",
+    "        pval[k] = summary(lm( fitted[,k]%>%as.matrix ~ raw[,k]%>%as.matrix ))$coef[2,4]\n",
     "      }\n",
     "      return(pval)\n",
     "    }\n",
@@ -876,7 +876,7 @@
     "      train_X = map(train,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
     "      train_Y = map(train,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix),\n",
     "      test_X = map(test,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
-    "      test_Y = map(test,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix)\n",
+    "      test_Y = map(test,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as_tibble)\n",
     "    )  \n",
     "    \n",
     "    # Filter Train X with maf and missing, filter test X with the same col as Train X\n",
@@ -929,7 +929,7 @@
     "      weight = map(susie,~\n",
     "      (coef(.x)[2:length(coef(.x))])\n",
     "      ),\n",
-    "      test_fitted = map2(susie,test_X,~predict(.x,.y)),\n",
+    "      test_fitted = map2(susie,test_X,~predict(.x,.y)%>%as.matrix),\n",
     "      rmse = map2(test_Y,test_fitted,~compute_rmse(.x,.y)),\n",
     "      r2 = map2(test_Y,test_fitted,~compute_r2(.x,.y)),\n",
     "      r2_raw = map2(test_Y,test_fitted,~compute_r2_raw(.x,.y)),\n",
