--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -351,8 +351,11 @@
     "# Propotion of samples set into testing, set to zero if no cv are needed.\n",
     "parameter: testing_prop = 0.2\n",
     "# Number of training & testing samples used\n",
-    "parameter: cv_times = 100\n",
+    "parameter: cv_times = 2\n",
     "\n",
+    "# parameters for the susie pipelines.\n",
+    "parameter: causal_variables_L = 10\n",
+    "parameter: scaled_prior_variance = 0.1\n",
     "\n",
     "# Get regions of interest to focus on.\n",
     "regions = [x.strip().split() for x in open(region_list).readlines() if x.strip() and not x.strip().startswith('#')]\n",
@@ -662,8 +665,7 @@
     "output: f'{wd:a}/susie/{_input[0]:bn}.susie.hsq',\n",
     "        f'{wd:a}/susie/{_input[0]:bn}.wgt.txt',\n",
     "        f'{wd:a}/susie/{_input[0]:bn}.susie.model.RData'\n",
-    "parameter: causal_variables_L = 10\n",
-    "parameter: scaled_prior_variance = 0.1\n",
+    "\n",
     "import os\n",
     "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = \"6G\" , tags = f'{step_name}_{_output[0]:bn}'\n",
@@ -706,7 +708,7 @@
     "      if (length(rm_col)) X <- X[, -rm_col]\n",
     "      rm_col <- which(apply(X, 2, is_zero_variance))\n",
     "      if (length(rm_col)) X <- X[, -rm_col]\n",
-    "      return(mean_impute(X))\n",
+    "      return(mean_impute(X))}\n",
     "      \n",
     "    ###Function to impute the missing X with means and then scale and center X\n",
     "      impute_and_transform = function(genos,impute = TRUE){\n",
@@ -719,7 +721,7 @@
     "    for(i in 1:ncol(tmp)){\n",
     "        tmp[,i]=tmp[,i]%>%scale()}\n",
     "        return(tmp)}}\n",
-    "    if ($[impute] == TRUE){\n",
+    "    \n",
     "\n",
     "    # Load data and transform\n",
     "    genos = read_plink(\"$[_input[0]:n]\")\n",
@@ -768,9 +770,20 @@
     "    # storing the wgt computed from susie, excluding only the na SNP\n",
     "    susie_wgt = tibble(susie = (coef(fitted1)[2:length(coef(fitted1))]))\n",
     "    susie_wgt%>%write_delim(\"$[_output[1]]\",delim = \"\\t\")\n",
+    "    \n",
     "    # Save the model for future use\n",
-    "    save(fitted1, file=\"$[_output[2]]\")"
+    "    fitted1$X = X\n",
+    "    fitted1$Y = Y\n",
+    "    save(fitted1, file=\"$[_output[2]]\")\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -780,8 +793,6 @@
    "source": [
     "# CV with univariate susie\n",
     "[susie_cv_4]\n",
-    "\n",
-    "\n",
     "input: group_by = 3, group_with = 'regions'\n",
     "output:  f'{wd:a}/result/{_input[2]:bn}.cv.RData',\n",
     "         f'{wd:a}/result/{_input[2]:bn}.cv_diag.RData'\n",
@@ -793,7 +804,7 @@
     "    library(\"plink2R\")\n",
     "    library(\"purrr\")\n",
     "    library(\"modelr\")\n",
-    "    library(\"susie\")\n",
+    "    library(\"susieR\")\n",
     "    \n",
     "    # Define functions\n",
     "   \n",
@@ -872,11 +883,11 @@
     "    cv_data_gen = function(X,Y,times,test_prop){\n",
     "    # Merged the X and Y for producing testing and training set for modelr cv\n",
     "    cv_df_raw = cbind(X,Y)%>%as_tibble() \n",
-    "    cv_df = crossv_mc(cv_df_raw, times,test = test_prop)%>%mutate(\n",
+    "    cv_df = crossv_mc(cv_df_raw, times ,test = test_prop)%>%mutate(\n",
     "      train_X = map(train,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
     "      train_Y = map(train,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix),\n",
     "      test_X = map(test,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
-    "      test_Y = map(test,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix)\n",
+    "      test_Y = map(test,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as_tibble)\n",
     "    )  \n",
     "    \n",
     "    # Filter Train X with maf and missing, filter test X with the same col as Train X\n",
@@ -889,19 +900,9 @@
     "    \n",
     "    # Load Data\n",
     "    full_model = attach('$[_input[2]]')\n",
-    "    full_model = full_model$m_$fitted1\n",
-    "    \n",
-    "    # Load data and transform\n",
-    "    genos = read_plink(\"$[_input[0]:nn]\")\n",
-    "  \n",
-    "    # Filter X by 0.1 NA and 0.01 MAF, and then transfrom X\n",
-    "    X_ftr = filter_X(genos$bed,0.1,0.01)\n",
-    "    X = impute_and_transform(X_ftr)\n",
-    "    Y = genos$fam%>%as_tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))\n",
-    "    Y = Y$V6\n",
-    "    \n",
-    "    # Make sure X and Y have the same order\n",
-    "    Y = Y%>%arrange(match(name,rownames(X)))%>%select(-name)\n",
+    "    full_model = full_model$fitted1\n",
+    "    X = full_model$X\n",
+    "    Y = full_model$Y$V6%>%as.tibble()\n",
     "\n",
     "    # Create cv dataset\n",
     "        \n",
@@ -929,7 +930,7 @@
     "      weight = map(susie,~\n",
     "      (coef(.x)[2:length(coef(.x))])\n",
     "      ),\n",
-    "      test_fitted = map2(susie,test_X,~predict(.x,.y)),\n",
+    "      test_fitted = map2(susie,test_X,~predict(.x,.y)%>%as_tibble),\n",
     "      rmse = map2(test_Y,test_fitted,~compute_rmse(.x,.y)),\n",
     "      r2 = map2(test_Y,test_fitted,~compute_r2(.x,.y)),\n",
     "      r2_raw = map2(test_Y,test_fitted,~compute_r2_raw(.x,.y)),\n",
