uni susie CV bug free

--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -794,9 +794,9 @@
     "# CV with univariate susie\n",
     "[susie_cv_4]\n",
     "input: group_by = 3, group_with = 'regions'\n",
-    "output:  f'{wd:a}/result/{_input[2]:bn}.cv.RData',\n",
-    "         f'{wd:a}/result/{_input[2]:bn}.cv_diag.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "output:  f'{wd:a}/susie/{_input[2]:bn}.cv.RData',\n",
+    "         f'{wd:a}/susie/{_input[2]:bn}.cv_diag.RData'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '8G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -974,12 +974,12 @@
     "input: group_by = \"all\"\n",
     "output:f'{wd:a}/susie/all_hsq.txt',\n",
     "       f'{wd:a}/susie.RData'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\"\n",
     "  head -1 $[_input[0]] > $[_output[0]]\n",
     "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample | uniq >> $[_output[0]]\n",
     "\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
-    "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output[1]}.stderr', stdout = f'{_output[1]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
     "    library(\"readr\")\n",
@@ -987,13 +987,15 @@
     "    # Load a template\n",
     "    region = read_delim(\"$[_output[0]]\",delim =\"\\t\")%>%select(path = file, ID = region )\n",
     "    # get the path\n",
+    "    dir = \"$[_input[0]:d]/\"\n",
+    "    pre = \"$[_input[0]:bnnnnn]\"\n",
     "    sur = \".susie.model.RData\"\n",
-    "    region = region%>%mutate(path = map(path, ~paste(collapse = \"\", c(.x,sur))))\n",
+    "    region = region%>%mutate(path = map(ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
     "    # Load the data\n",
     "    output = region%>%mutate(env = map(path,~attach(.x)),\n",
-    "                             model = map(env,fitted1, ~get(.y,env = .x)))\n",
+    "                             model = map(env, ~.x$fitted1))\n",
     "    # Save the combined output\n",
-    "    save(output,file = \"$[_output]\")\n",
+    "    save(output,file = \"$[_output[1]]\")\n",
     "\n",
     "\n"
    ]
@@ -1008,14 +1010,14 @@
     "[susie_cv_5]\n",
     "input: group_by = \"all\"\n",
     "output:f'{wd:a}/susie/all_hsq.txt',\n",
-    "       f'{wd:a}/susie.RData'\n",
+    "       f'{wd:a}/susie_cv.RData'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\"\n",
     "\n",
-    "  head -1 $[_input[0]:bnnn].hsq > $[_output]\n",
-    "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample | uniq >> $[_output]\n",
+    "  head -1 $[_input[0]:nnn].hsq > $[_output[0]]\n",
+    "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample | uniq >> $[_output[0]]\n",
     "\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output:bn}'\n",
-    "R: expand= \"$[ ]\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
+    "R: expand= \"$[ ]\", stderr = f'{_output[1]}.stderr', stdout = f'{_output[1]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
     "    library(\"readr\")\n",
@@ -1023,13 +1025,15 @@
     "    # Load a template\n",
     "    region = read_delim(\"$[_output[0]]\",delim =\"\\t\")%>%select(path = file, ID = region )\n",
     "    # get the path\n",
+    "    dir = \"$[_input[0]:d]/\"\n",
+    "    pre = \"$[_input[0]:bnnnnn]\"\n",
     "    sur = \".susie.model.cv.RData\"\n",
-    "    region = region%>%mutate(path = map(path, ~paste(collapse = \"\", c(.x,sur))))\n",
+    "    region = region%>%mutate(path = map(ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
     "    # Load the data\n",
     "    output = region%>%mutate(env = map(path,~attach(.x)),\n",
-    "                             model = map(env,fitted1, ~get(.y,env = .x)))\n",
+    "                             model = map(env, ~.x$fitted1))\n",
     "    # Save the combined output\n",
-    "    save(output,file = \"$[_output]\")"
+    "    save(output,file = \"$[_output[1]]\")"
    ]
   }
  ],
