MWE,Description, and scaled Y for uni and mv susie

--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -100,8 +100,7 @@
     "- `.wgt.Rdat` The actual weight data that are computed.\n",
     "- `.weight_list.txt` The index text file recording information about each of the wgt.Rdat data, including the filename, corresponding region ID, Chromosomes, start and end position, heritability, and the SE and P-value of the heritability.\n",
     "- `.dat` the actual TWAS association of the genes, a detailed description of this output are outlined here:http://gusevlab.org/projects/fusion/\n",
-    "\n",
-    "\n",
+    "- `susie.RData` a R object containing all the susie output for each of the regions\n",
     " \n",
     "\n",
     "\n",
@@ -201,12 +200,8 @@
    },
    "source": [
     "# Working example\n",
-    "A minimal working example (MWE) dataset that can be downloaded from the private repo:\n",
-    "https://github.com/cumc/neuro-twas/blob/master/TWAS_pipeline_MWE%202.zip\n",
-    "the genotypes file can be downloaded from the following link:\n",
-    "https://data.broadinstitute.org/alkesgroup/FUSION/LDREF.tar.bz2\n",
-    "\n",
-    "**FIXME: please upload the data to synapse.org and take it out of github. On github we don't store large datasets. Please ask me about account information for synapse.org**\n",
+    "The MWE file is availble at :\n",
+    "\"https://www.synapse.org/#!Synapse:syn24179064/files/\"\n",
     "\n",
     "The time it take to run this MWE shall be around 2 minutes. Pay extra attention to the gene_start and gene_end position  when using following command on gene_exp file that are not this MWE. Also, when there is too few or too many genes that passed the heritability check, consider increasing or decreasing the --window options. "
    ]
@@ -230,18 +225,27 @@
    "source": [
     "## Test pipeline with test data\n",
     "## Switch back to abosolute path, otherwise there will be file not found error in step 5\n",
-    "sos run archive.ipynb association_test \\\n",
-    "  --gwas_sumstat ./data/sum_stat.sumstats \\\n",
-    "  --molecular-pheno ./data/gene_exp_file.txt \\\n",
+    "sos run twas_fusion_susie.ipynb susie \\\n",
+    "  --molecular-pheno ./molecular_phenotype \\\n",
     "  --wd ./ \\\n",
-    "  --genotype_list ./data/ld_ref_abs \\\n",
-    "  --region_list ./data/region_list.txt \\\n",
+    "  --genotype_list ./geno_dir\\\n",
+    "  --region_list ./region_list \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 5 \\\n",
     "  --window 500000 \\\n",
     "  --model blup lasso top1 enet \\\n",
-    "  --container gaow/twas \n",
-    "  \n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \n",
+    " \n",
+    "sos run twas_fusion_susie.ipynb compute_wgt_1 \\\n",
+    "  --molecular-pheno ./molecular_phenotype \\\n",
+    "  --wd ./ \\\n",
+    "  --genotype_list ./geno_dir\\\n",
+    "  --region_list ./region_list \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 5 \\\n",
+    "  --window 500000 \\\n",
+    "  --model blup lasso top1 enet \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \n",
     "  \n"
    ]
   },
@@ -252,9 +256,7 @@
    },
    "source": [
     "## Association test only \n",
-    "If using exisiting weight, use the association test(AssocTest) workflow. A minimum working example is shown below\n",
-    "\n",
-    "FIXME: please complete it."
+    "If using exisiting weight, use the association test(AssocTest) workflow. A minimum working example is shown below"
    ]
   },
   {
@@ -274,10 +276,10 @@
    ],
    "source": [
     "sos run twas_fusion.ipynb association_test \\\n",
-    "  --gwas_sumstat /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/sum_stat.sumstats \\\n",
-    "  --molecular-pheno /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/gene_exp_file.txt \\\n",
-    "  --wd /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/Working_at \\\n",
-    "  --genotype_list /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/ld_ref \\\n",
+    "  --gwas_sumstat ./sum_stat.sumstats \\\n",
+    "  --molecular-pheno ./gene_exp_file.txt \\\n",
+    "  --wd ./ \\\n",
+    "  --genotype_list ./genptype_file_LDREF \\\n",
     "  --region_list /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/region_list.txt \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 5 \\\n",
@@ -734,28 +736,34 @@
     "    Y = genos$fam%>%as_tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))\n",
     "    \n",
     "    # Make sure X and Y have the same order\n",
-    "    Y = Y%>%arrange(match(name,rownames(X)))%>%select(-name)\n",
+    "    Y = Y%>%arrange(match(name,rownames(X)))%>%select(V6)\n",
+    "    \n",
+    "    \n",
+    "    # Center and scale Y \n",
+    "    \n",
+    "    Y = impute_and_transform(Y, impute = FALSE )\n",
+    "    Y = Y$V6\n",
     "    \n",
     "    # Susie with full samples\n",
-    "    fitted1 = susie(X, Y$V6,\n",
+    "    fitted1 = susie(X, Y,\n",
     "                  L = $[causal_variables_L],\n",
     "                  estimate_residual_variance = TRUE, \n",
     "                  estimate_prior_variance = FALSE,\n",
     "                  scaled_prior_variance = $[scaled_prior_variance])\n",
     "                  \n",
-    "    H1 = var(predict(fitted1))/var(Y$V6)\n",
+    "    H1 = var(predict(fitted1))/var(Y)\n",
     "    \n",
     "    top_pip = which(fitted1$pip == fitted1$pip%>%max())\n",
     "    top_snp_full_sample = colnames(X)[top_pip]\n",
     "    top_snp_full_sample = paste(top_snp_full_sample,collapse = \",\")\n",
     "    \n",
     "    # hsq for the best performing snp using naive way, excluding only the na SNP\n",
-    "    sumstats <- univariate_regression(X, Y$V6)\n",
+    "    sumstats <- univariate_regression(X, Y)\n",
     "    z_scores <- sumstats$betahat / sumstats$sebetahat\n",
     "    max(abs(z_scores%>%na.omit()))\n",
     "    top_snp = which(abs(z_scores) == max(abs(z_scores%>%na.omit())))\n",
     "    top_snp\n",
-    "    HH = var(X[,top_snp]*sumstats$betahat[top_snp])/var(Y$V6)\n",
+    "    HH = var(X[,top_snp]*sumstats$betahat[top_snp])/var(Y)\n",
     "    top_snp_naive = colnames(X)[top_snp]\n",
     "    top_snp_naive = paste(top_snp_naive,collapse = \",\")\n",
     "\n",
@@ -779,11 +787,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Conducting susieR test\n",
+    "This step conduct 100 times 5 fold cross validation for the susieR weights"
+   ]
   },
   {
    "cell_type": "code",
@@ -796,7 +805,7 @@
     "input: group_by = 3, group_with = 'regions'\n",
     "output:  f'{wd:a}/susie/{_input[2]:bn}.cv.RData',\n",
     "         f'{wd:a}/susie/{_input[2]:bn}.cv_diag.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '8G', tags = f'{step_name}_{_output[0]:bn}'\n",
+    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '8cG', tags = f'{step_name}_{_output[0]:bn}'\n",
     "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
     "    library(\"dplyr\")\n",
     "    library(\"tibble\")\n",
@@ -902,7 +911,7 @@
     "    full_model = attach('$[_input[2]]')\n",
     "    full_model = full_model$fitted1\n",
     "    X = full_model$X\n",
-    "    Y = full_model$Y$V6%>%as.tibble()\n",
+    "    Y = full_model$Y%>%as.tibble()\n",
     "\n",
     "    # Create cv dataset\n",
     "        \n",
@@ -961,6 +970,14 @@
     "    \n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save output\n",
+    "This step create the all_hsq.txt file to summarize the susie result and create a R object to host all the susieR models."
    ]
   },
   {
