--- a/Workflow/twas_fusion_susie.ipynb
+++ b/Workflow/twas_fusion_susie.ipynb
@@ -699,7 +699,7 @@
     "    }\n",
     "    \n",
     "    is_zero_variance <- function(x) {\n",
-    "      if (length(unique(x))==1) return(T)\n",
+    "      if (length(unique(x%>%na.omit))==1) return(T)\n",
     "      else return(F)\n",
     "    }\n",
     "    ### Filter X matrix\n",
